# ResearchAssistant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: benchmark_plan.md  hardening_plan.md  immediate_hardening_tasks.md  product_spec.md  test_plan.md  usage.md  validation_checklist.md  validation_run_log.md  validation_scripts.md
proposal/: proposal.md  research_development_assistant_design.tex
scripts/: run_clean_ingest_palazzo.sh  run_literature_audit_cycle.sh  run_parser_preflight.sh  run_tests.sh
src/research_assistant/: cli.py  config.py  paths.py
src/research_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: README.md
tests/fixtures/: arxiv_dlhmc.json  crossref_false_positive_neutra.json  openalex_dlhmc_bad_authors.json  openalex_neutra.json
tests/integration/: test_benchmark_inventory.py  test_candidate_resolution.py  test_citation_cli.py  test_cli_commands.py  test_parser_first_ingest_precedence.py
tests/scripts/: run_benchmark_inventory.py  run_parser_benchmark.py  run_pdf_ingest_validation.py  run_query_ingest_validation.py
tests/unit/: test_arxiv_source.py  test_benchmark_expected_schema.py  test_benchmark_fixtures.py  test_claim_support.py  test_discovery.py  test_discovery_normalization.py  test_downloads.py  test_draft_summary.py  test_filename_parse.py  test_identity_validate.py  test_latex_source_processing.py  test_metadata.py  test_metadata_parser_hints.py  test_parser_adapter_status.py  test_parser_frontmatter_extraction.py  test_parser_grobid.py  test_parser_mineru.py  test_parser_orchestrator.py  (+8 more)
(+49 files in other folders)
