[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-assistant"
version = "0.1.0"
description = "Local-first research development assistant for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ra = "research_assistant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
